Fix checkbox width on IE11

--- a/src/shared/components/checkbox/_checkbox.scss
+++ b/src/shared/components/checkbox/_checkbox.scss
@@ -7,6 +7,12 @@
   position: relative;
   width: 24px;
 
+  // NB: Fix width for IE11
+  @media screen and (-ms-high-contrast: active),
+  screen and (-ms-high-contrast: none) {
+    width: 32px;
+  }
+
   input {
     -ms-appearance: none;
     -moz-appearance: none;
